# link-kicker

./: .env.example  .gitignore  Makefile  README.md  aerich.ini  commands.yaml  commands.yaml.example  config.yaml.example  docker-compose.yml  main.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: lint.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  package_management_migration.md  project_overview.md  suggested_commands.md  suggested_shell_commands.md  task_completion_checklist.md
app/: __init__.py  config.py  constants.py  enums.py
app/bot/: __init__.py  bot.py  messages.py
app/bot/dialogs/: __init__.py  feedback.py  hour.py  language.py  timezone.py
app/bot/dialogs/widgets/: text.py
app/bot/forms/: __init__.py  hour.py  language.py
app/bot/forms/fields/: __init__.py  fields.py  validators.py
app/bot/handlers/: __init__.py  feedback.py  hour.py  language.py  link.py  mailing.py  start.py  statistics.py  timezone.py
app/bot/middlewares/: __init__.py  i18n.py
app/bot/utils/: __init__.py  errors.py  pagination.py  statistics.py
app/database/: __init__.py  mixins.py  models.py
app/misc/: __init__.py  helper.py  sentry.py
app/tasks/: __init__.py  jobs.py
locales/en/LC_MESSAGES/: link_kicker.po
locales/ru/LC_MESSAGES/: link_kicker.po
migrations/models/: 1_20220118233329_None.sql  2_20220119025019_user_language_iso.sql  3_20220210053349_user_mailing_state.sql  4_20220210054521_mailing_intent.sql  5_20220817030940_user_hour_utc_offset.sql  6_20220820013420_feedbackreport.sql  7_20220820213233_user_tg_id_to_bigint.sql
scripts/: compile_locales.sh  extract_update_locales.sh
