[tool.poetry]
name = "link-kicker"
version = "0.1.0"
description = ""
authors = ["Nikita Y. <fmajesty@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
aiogram = "^2.13"
loguru = "^0.5.3"
tortoise-orm = {extras = ["asyncpg"], version = "^0.17.2"}
Telethon = "^1.21.1"
aerich = "^0.5.3"
celery = "^5.0.5"
redis = "^3.5.3"
aioredis = "^1.3.1"
APScheduler = "^3.7.0"
sentry-sdk = "^1.3.1"
python-dotenv = "^0.19.2"
aiogram-dialog = "^1.9.0"
timezonefinder = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[aerich]
tortoise_orm = "app.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

