[project]
name = "link-kicker"
version = "0.1.0"
description = ""
authors = [{name = "Nikita Y.", email = "fmajesty@pm.me"}]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyYAML>=6.0",
    "aiogram==2.22.1",
    "loguru==0.5.3",
    "tortoise-orm[asyncpg]==0.17.8",
    "Telethon==1.23.0",
    "aerich==0.5.8",
    "celery==5.1.2",
    "redis==3.5.3",
    "aioredis==1.3.1",
    "APScheduler==3.7.0",
    "sentry-sdk==1.3.1",
    "python-dotenv==0.19.2",
    "aiogram-dialog==1.9.0",
    "timezonefinder==5.2.0",
]

[project.optional-dependencies]
dev = [
    "black==21.7b0",
    "isort==5.9.3",
]

[tool.aerich]
tortoise_orm = "app.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
