[project]
name = "link-kicker"
version = "0.1.0"
description = ""
authors = [{name = "Nikita Y.", email = "fmajesty@pm.me"}]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyYAML>=6.0",
    "aiogram==2.22.1",
    "loguru==0.5.3",
    "tortoise-orm[asyncpg]==0.17.8",
    "Telethon==1.23.0",
    "aerich==0.5.8",
    "celery==5.1.2",
    "redis==3.5.3",
    "aioredis==1.3.1",
    "APScheduler==3.7.0",
    "sentry-sdk==1.3.1",
    "python-dotenv==0.19.2",
    "aiogram-dialog==1.9.0",
    "timezonefinder==5.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.aerich]
tortoise_orm = "app.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
